crabbing-interpreters/tests/testsuite/snapshots/testsuite__scope-craftinginterpreters__test__operator__subtract.lox.snap
---
source: crabbing-interpreters/tests/testsuite/main.rs
info:
  program: crabbing-interpreters
  args:
    - craftinginterpreters/test/operator/subtract.lox
    - "--scopes"
    - "--stop-at=scopes"
---
success: true
exit_code: 0
----- stdout -----
(program
   (print (- 4.0 3.0))
   (print (- 1.2 1.2)))

----- stderr -----
